--- a/views/index.erb
+++ b/views/index.erb
@@ -28,6 +28,7 @@ input[type=submit] {
   width: 90%;
   height: 36px;
   margin-top: 32px;
+  background-color: #fff;
 }
 input[type=submit]:hover {
   background-color: powderblue;
